--- a/index.html
+++ b/index.html
@@ -42,21 +42,45 @@
             cursor: pointer;
             margin-top: 10px;
         }
+        .hidden {
+            display: none;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="question">What lives in the ocean?</div>
-        <input type="text" class="answer-box" id="answer" placeholder="Type your answer">
-        <button onclick="checkAnswer()">Submit</button>
-        <p id="response"></p>
+        <div class="question" id="question1">1 in 50 million, from red to the color of the sea</div>
+        <input type="text" class="answer-box" id="answer1" placeholder="Type your answer">
+        <button onclick="checkAnswer1()">Submit</button>
+        <p id="response1"></p>
     </div>
+
+    <div class="container hidden" id="secondQuestion">
+        <div class="question">What lives in the ocean?</div>
+        <input type="text" class="answer-box" id="answer2" placeholder="Type your answer">
+        <button onclick="checkAnswer2()">Submit</button>
+        <p id="response2"></p>
+    </div>
+
     <script>
-        function checkAnswer() {
-            let answer = document.getElementById("answer").value.toLowerCase();
-            let response = document.getElementById("response");
+        function checkAnswer1() {
+            let answer = document.getElementById("answer1").value.toLowerCase().trim();
+            let response = document.getElementById("response1");
+
+            if (answer === "blue lobster") {
+                response.textContent = "Correct!";
+                document.getElementById("secondQuestion").classList.remove("hidden");
+            } else {
+                response.textContent = "Wrong! Try again.";
+            }
+        }
+
+        function checkAnswer2() {
+            let answer = document.getElementById("answer2").value.toLowerCase().trim();
+            let response = document.getElementById("response2");
             let correctAnswers = ["fish", "whale", "octopus", "shark", "dolphin"];
-            if (correctAnswers.includes(answer.trim())) {
+
+            if (correctAnswers.includes(answer)) {
                 response.textContent = "Correct!";
             } else {
                 response.textContent = "Wrong! Try again.";
