--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <div class="css-fish" style="top: 40%; left: -100px; animation-delay: 10s;"></div>
 
   <!-- Monster fish image -->
-  <img src="/mnt/data/image.png" class="monster" />
+  <img src="/mnt/data/image.png" class="monster" alt="Monster Fish" />
 
   <script>
     const questions = [
